# Cattino

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.py
catin/: __init__.py  backend.py  cli.py  comms.py  constants.py  settings.py  utils.py
catin/core/: device_allocator.py  digraph.py  task_scheduler.py
catin/tasks/: __init__.py  interface.py  proc_task.py  task_graph.py
cattino/: __init__.py  backend.py  cli.py  comms.py  constants.py  settings.py  utils.py
cattino/core/: device_allocator.py  path_tree.py  task_scheduler.py
cattino/tasks/: interface.py  proc_task.py  task_graph.py
docs/: README.md  basic_usage.md  example.py
docs/source/: conf.py  index.md
docs/source/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/_build/html/.doctrees/: index.doctree
docs/source/_build/html/.doctrees/core/: magic_string.doctree  tasks.doctree
docs/source/_build/html/.doctrees/getting_started/: quickstart.doctree
docs/source/_build/html/_sources/: index.md
docs/source/_build/html/_sources/core/: magic_string.md
docs/source/_build/html/_sources/getting_started/: quickstart.md
docs/source/_build/html/_static/: custom.js
docs/source/_build/html/api/tasks/: device_required_task.html  (+5 more)
docs/source/_build/html/core/: magic_string.html  tasks.html
docs/source/_build/html/getting_started/: quickstart.html
docs/source/api/tasks/: task.md
docs/source/getting_started/: example.py  quickstart.md
requirements/: common.txt  docs.txt
(+6 files in other folders)
